# Shop_bot

./: .gitignore  config.py  main.py  pyproject.toml  requirements.txt
database/: __init__.py  admin_queries.py  init.py  service.py  tables.sql
handlers/: __init__.py  admin_handlers.py  user_handlers.py
keyboards/: __init__.py  admin_kb.py  user_kb.py
