[project]
name = "shop-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.29.0",
    "asyncio>=4.0.0",
    "loguru>=0.7.3",
]

[tool.ruff]
line-length = 79
src = ["src"]

[tool.ruff.lint]
ignore = ["E501"]
select = ["E","F","W","I","UP"]